--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "b79f8b8a",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "b607a68d",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "4                5  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "a06ae9e0",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "34970991",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "f2bc70e2",
    "metadata": {},
    "outputs": [
@@ -251,34 +251,34 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>83.898817</td>\n",
-       "      <td>86.645768</td>\n",
-       "      <td>89.623865</td>\n",
-       "      <td>88.109659</td>\n",
+       "      <td>83.570750</td>\n",
+       "      <td>86.535800</td>\n",
+       "      <td>89.195850</td>\n",
+       "      <td>87.845692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVC</td>\n",
-       "      <td>95.864629</td>\n",
-       "      <td>94.796184</td>\n",
-       "      <td>99.234760</td>\n",
-       "      <td>96.964704</td>\n",
+       "      <td>95.916429</td>\n",
+       "      <td>94.678355</td>\n",
+       "      <td>99.455253</td>\n",
+       "      <td>97.008033</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Decision Tree</td>\n",
        "      <td>99.050332</td>\n",
-       "      <td>99.006964</td>\n",
-       "      <td>99.571984</td>\n",
-       "      <td>99.288670</td>\n",
+       "      <td>99.044915</td>\n",
+       "      <td>99.533074</td>\n",
+       "      <td>99.288394</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>99.274799</td>\n",
-       "      <td>98.985098</td>\n",
-       "      <td>99.935149</td>\n",
-       "      <td>99.457855</td>\n",
+       "      <td>99.179833</td>\n",
+       "      <td>98.857949</td>\n",
+       "      <td>99.922179</td>\n",
+       "      <td>99.387215</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -286,13 +286,13 @@
       ],
       "text/plain": [
        "                 Model   Accuracy  Precision     Recall         F1\n",
-       "0  Logistic Regression  83.898817  86.645768  89.623865  88.109659\n",
-       "1                  SVC  95.864629  94.796184  99.234760  96.964704\n",
-       "2        Decision Tree  99.050332  99.006964  99.571984  99.288670\n",
-       "3        Random Forest  99.274799  98.985098  99.935149  99.457855"
+       "0  Logistic Regression  83.570750  86.535800  89.195850  87.845692\n",
+       "1                  SVC  95.916429  94.678355  99.455253  97.008033\n",
+       "2        Decision Tree  99.050332  99.044915  99.533074  99.288394\n",
+       "3        Random Forest  99.179833  98.857949  99.922179  99.387215"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "e2f92b1f",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
        "'Random Forest'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
+   "id": "d0f4ef77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, ..., 1, 0, 1])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred = lr.predict(X_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "82343dc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['rf1.pkl']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import joblib\n",
+    "\n",
+    "# filename = \"rf1.pkl\"\n",
+    "# joblib.dump(rf,filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "620859f8",
    "metadata": {},
    "outputs": [],
@@ -342,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "e19fa5a7",
    "metadata": {},
    "outputs": [],
@@ -373,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "9ab250f1",
    "metadata": {},
    "outputs": [
@@ -409,34 +457,34 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>82.966416</td>\n",
-       "      <td>82.210987</td>\n",
-       "      <td>83.022559</td>\n",
-       "      <td>82.448739</td>\n",
+       "      <td>83.449883</td>\n",
+       "      <td>82.729252</td>\n",
+       "      <td>83.512714</td>\n",
+       "      <td>82.959238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVC</td>\n",
-       "      <td>94.103427</td>\n",
-       "      <td>94.350952</td>\n",
-       "      <td>94.168271</td>\n",
-       "      <td>93.907201</td>\n",
+       "      <td>93.870327</td>\n",
+       "      <td>94.057615</td>\n",
+       "      <td>93.933512</td>\n",
+       "      <td>93.667362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>98.566865</td>\n",
-       "      <td>98.565109</td>\n",
-       "      <td>98.580369</td>\n",
-       "      <td>98.567175</td>\n",
+       "      <td>98.592765</td>\n",
+       "      <td>98.592779</td>\n",
+       "      <td>98.604828</td>\n",
+       "      <td>98.592201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>99.214366</td>\n",
-       "      <td>99.223456</td>\n",
-       "      <td>99.226069</td>\n",
-       "      <td>99.214541</td>\n",
+       "      <td>99.153932</td>\n",
+       "      <td>99.164408</td>\n",
+       "      <td>99.166520</td>\n",
+       "      <td>99.153495</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -444,13 +492,13 @@
       ],
       "text/plain": [
        "                 Model   Accuracy  Precision     Recall         F1\n",
-       "0  Logistic Regression  82.966416  82.210987  83.022559  82.448739\n",
-       "1                  SVC  94.103427  94.350952  94.168271  93.907201\n",
-       "2        Decision Tree  98.566865  98.565109  98.580369  98.567175\n",
-       "3        Random Forest  99.214366  99.223456  99.226069  99.214541"
+       "0  Logistic Regression  83.449883  82.729252  83.512714  82.959238\n",
+       "1                  SVC  93.870327  94.057615  93.933512  93.667362\n",
+       "2        Decision Tree  98.592765  98.592779  98.604828  98.592201\n",
+       "3        Random Forest  99.153932  99.164408  99.166520  99.153495"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,8 +511,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "4e2dc705",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 4, 1, ..., 0, 3, 5])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf2 = RandomForestClassifier()\n",
+    "rf2.fit(X_train, y_train)\n",
+    "y_pred = lr.predict(X_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a6dce6fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['rf2.pkl']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import joblib\n",
+    "\n",
+    "# filename = \"rf2.pkl\"\n",
+    "# joblib.dump(rf2,filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c6998ef",
    "metadata": {},
    "outputs": [],
    "source": []
