model results interpreted

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "b79f8b8a",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "b607a68d",
    "metadata": {},
    "outputs": [
@@ -54,11 +54,11 @@
        "      <th></th>\n",
        "      <th>Type</th>\n",
        "      <th>Machine failure</th>\n",
-       "      <th>Rotational speed [rpm]</th>\n",
-       "      <th>Torque [Nm]</th>\n",
-       "      <th>Tool wear [min]</th>\n",
-       "      <th>Air temperature [c]</th>\n",
-       "      <th>Process temperature [c]</th>\n",
+       "      <th>Rotational_speed_rpm</th>\n",
+       "      <th>Torque_Nm</th>\n",
+       "      <th>Tool_wear_min</th>\n",
+       "      <th>Air_temperature</th>\n",
+       "      <th>Process_temperature</th>\n",
        "      <th>type_of_failure</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -123,29 +123,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Type  Machine failure  Rotational speed [rpm]  Torque [Nm]  \\\n",
-       "0   1.0                0                0.222934     0.535714   \n",
-       "1   0.0                0                0.139697     0.583791   \n",
-       "2   0.0                0                0.192084     0.626374   \n",
-       "3   0.0                0                0.154249     0.490385   \n",
-       "4   0.0                0                0.139697     0.497253   \n",
+       "   Type  Machine failure  Rotational_speed_rpm  Torque_Nm  Tool_wear_min  \\\n",
+       "0   1.0                0              0.222934   0.535714       0.000000   \n",
+       "1   0.0                0              0.139697   0.583791       0.011858   \n",
+       "2   0.0                0              0.192084   0.626374       0.019763   \n",
+       "3   0.0                0              0.154249   0.490385       0.027668   \n",
+       "4   0.0                0              0.139697   0.497253       0.035573   \n",
        "\n",
-       "   Tool wear [min]  Air temperature [c]  Process temperature [c]  \\\n",
-       "0         0.000000             0.304348                 0.358025   \n",
-       "1         0.011858             0.315217                 0.370370   \n",
-       "2         0.019763             0.304348                 0.345679   \n",
-       "3         0.027668             0.315217                 0.358025   \n",
-       "4         0.035573             0.315217                 0.370370   \n",
-       "\n",
-       "   type_of_failure  \n",
-       "0                5  \n",
-       "1                5  \n",
-       "2                5  \n",
-       "3                5  \n",
-       "4                5  "
+       "   Air_temperature  Process_temperature  type_of_failure  \n",
+       "0         0.304348             0.358025                5  \n",
+       "1         0.315217             0.370370                5  \n",
+       "2         0.304348             0.345679                5  \n",
+       "3         0.315217             0.358025                5  \n",
+       "4         0.315217             0.370370                5  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "a06ae9e0",
    "metadata": {},
    "outputs": [],
@@ -184,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "34970991",
    "metadata": {},
    "outputs": [],
@@ -215,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "f2bc70e2",
    "metadata": {},
    "outputs": [
@@ -251,34 +244,34 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>83.570750</td>\n",
-       "      <td>86.535800</td>\n",
-       "      <td>89.195850</td>\n",
-       "      <td>87.845692</td>\n",
+       "      <td>84.036951</td>\n",
+       "      <td>86.526237</td>\n",
+       "      <td>90.038911</td>\n",
+       "      <td>88.247632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVC</td>\n",
-       "      <td>95.916429</td>\n",
-       "      <td>94.678355</td>\n",
-       "      <td>99.455253</td>\n",
-       "      <td>97.008033</td>\n",
+       "      <td>96.002763</td>\n",
+       "      <td>94.939849</td>\n",
+       "      <td>99.286641</td>\n",
+       "      <td>97.064604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>99.050332</td>\n",
-       "      <td>99.044915</td>\n",
-       "      <td>99.533074</td>\n",
-       "      <td>99.288394</td>\n",
+       "      <td>98.963999</td>\n",
+       "      <td>98.980382</td>\n",
+       "      <td>99.468223</td>\n",
+       "      <td>99.223703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>99.179833</td>\n",
-       "      <td>98.857949</td>\n",
-       "      <td>99.922179</td>\n",
-       "      <td>99.387215</td>\n",
+       "      <td>99.231633</td>\n",
+       "      <td>98.921556</td>\n",
+       "      <td>99.935149</td>\n",
+       "      <td>99.425769</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -286,13 +279,13 @@
       ],
       "text/plain": [
        "                 Model   Accuracy  Precision     Recall         F1\n",
-       "0  Logistic Regression  83.570750  86.535800  89.195850  87.845692\n",
-       "1                  SVC  95.916429  94.678355  99.455253  97.008033\n",
-       "2        Decision Tree  99.050332  99.044915  99.533074  99.288394\n",
-       "3        Random Forest  99.179833  98.857949  99.922179  99.387215"
+       "0  Logistic Regression  84.036951  86.526237  90.038911  88.247632\n",
+       "1                  SVC  96.002763  94.939849  99.286641  97.064604\n",
+       "2        Decision Tree  98.963999  98.980382  99.468223  99.223703\n",
+       "3        Random Forest  99.231633  98.921556  99.935149  99.425769"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "e2f92b1f",
    "metadata": {},
    "outputs": [
@@ -315,7 +308,7 @@
        "'Random Forest'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,17 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "d0f4ef77",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, ..., 1, 0, 1])"
+       "array([1, 0, 0, ..., 1, 0, 0])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "82343dc0",
    "metadata": {},
    "outputs": [
@@ -362,7 +355,7 @@
        "['rf1.pkl']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "620859f8",
    "metadata": {},
    "outputs": [],
@@ -390,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "e19fa5a7",
    "metadata": {},
    "outputs": [],
@@ -421,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "9ab250f1",
    "metadata": {},
    "outputs": [
@@ -457,34 +450,34 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>83.449883</td>\n",
-       "      <td>82.729252</td>\n",
-       "      <td>83.512714</td>\n",
-       "      <td>82.959238</td>\n",
+       "      <td>83.510317</td>\n",
+       "      <td>82.796300</td>\n",
+       "      <td>83.570031</td>\n",
+       "      <td>83.036450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SVC</td>\n",
-       "      <td>93.870327</td>\n",
-       "      <td>94.057615</td>\n",
-       "      <td>93.933512</td>\n",
-       "      <td>93.667362</td>\n",
+       "      <td>93.999827</td>\n",
+       "      <td>94.194712</td>\n",
+       "      <td>94.068074</td>\n",
+       "      <td>93.799624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>98.592765</td>\n",
-       "      <td>98.592779</td>\n",
-       "      <td>98.604828</td>\n",
-       "      <td>98.592201</td>\n",
+       "      <td>98.687732</td>\n",
+       "      <td>98.687525</td>\n",
+       "      <td>98.700066</td>\n",
+       "      <td>98.687661</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>99.153932</td>\n",
-       "      <td>99.164408</td>\n",
-       "      <td>99.166520</td>\n",
-       "      <td>99.153495</td>\n",
+       "      <td>99.214366</td>\n",
+       "      <td>99.223419</td>\n",
+       "      <td>99.225983</td>\n",
+       "      <td>99.214495</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -492,13 +485,13 @@
       ],
       "text/plain": [
        "                 Model   Accuracy  Precision     Recall         F1\n",
-       "0  Logistic Regression  83.449883  82.729252  83.512714  82.959238\n",
-       "1                  SVC  93.870327  94.057615  93.933512  93.667362\n",
-       "2        Decision Tree  98.592765  98.592779  98.604828  98.592201\n",
-       "3        Random Forest  99.153932  99.164408  99.166520  99.153495"
+       "0  Logistic Regression  83.510317  82.796300  83.570031  83.036450\n",
+       "1                  SVC  93.999827  94.194712  94.068074  93.799624\n",
+       "2        Decision Tree  98.687732  98.687525  98.700066  98.687661\n",
+       "3        Random Forest  99.214366  99.223419  99.225983  99.214495"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,17 +504,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "4e2dc705",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 4, 1, ..., 0, 3, 5])"
+       "array([0, 4, 5, ..., 0, 3, 3])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "a6dce6fe",
    "metadata": {},
    "outputs": [
@@ -545,16 +538,16 @@
        "['rf2.pkl']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# import joblib\n",
+    "import joblib\n",
     "\n",
-    "# filename = \"rf2.pkl\"\n",
-    "# joblib.dump(rf2,filename)"
+    "filename = \"rf2.pkl\"\n",
+    "joblib.dump(rf2,filename)"
    ]
   },
   {
